objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Deposit Process</fullName>
        <description>Deposit Process is for Opportunity Deposit record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Account Setup</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Proposal %2F Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Wallet Share</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LLC_BI__Loan</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LLC_BI__Treasury Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Track Deposit Pipeline</fullName>
        <description>PwC AC Deposit Opportunity Processes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Onboarding</fullName>
        </values>
        <values>
            <fullName>Proposal %2F Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Track Treasury Products Sold</fullName>
        <description>Track treasury products sold (projected fee income)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Install</fullName>
        </values>
        <values>
            <fullName>Onboarding</fullName>
        </values>
        <values>
            <fullName>Proposal %2F Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Treasury Management Process</fullName>
        <description>Treasury Management Process is for Opportunity Treasury Management record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Install</fullName>
        </values>
        <values>
            <fullName>Proposal %2F Negotiation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>nCino Loan</fullName>
        <description>nCino Loan Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Appointment</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Solution %2F Ask</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Annual_TM_Income__c</fullName>
        <description>Fee Income generated by TM Product. (Annually)</description>
        <inlineHelpText>Anticipated Annual Fee Income</inlineHelpText>
        <label>Annual TM Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_AccountFieldsNotFilled__c</fullName>
        <formula>IF(
AND(Account.RecordType.Name = &apos;Business&apos;,
OR(
ISBLANK(Text(Account.Type)),
ISBLANK(Account.LLC_BI__Naics_Code__c),
ISBLANK(Account.LLC_BI__Branch__c),
ISBLANK(Account.LLC_BI__Tax_Identification_Number_PE__c),  
ISBLANK((TEXT(Account.JHJX__CustCode__c))),
ISBLANK(Account.ShippingStreet),
ISBLANK(Account.ShippingCity),
ISBLANK(Account.ShippingState),
ISBLANK(Account.ShippingPostalCode),
ISBLANK(Account.ShippingCountry),
ISBLANK( Account.CF_Account_Primary_Contact__r.Email ),
ISBLANK( Account.CF_Account_Primary_Contact__r.Phone )
)),
&quot;True&quot;, 

IF(
AND(Account.RecordType.Name = &apos;Person Account&apos;,
OR(
ISBLANK(Text(Account.Type)),
ISBLANK(Account.LLC_BI__Naics_Code__c),
ISBLANK(Account.LLC_BI__Branch__c),
ISBLANK(Account.LLC_BI__SS_PE__pc),
ISBLANK((TEXT(Account.JHJX__CustCode__c))),
ISBLANK( Account.PersonContact.MailingCity ),
ISBLANK( Account.PersonContact.MailingCountry ),
ISBLANK( Account.PersonContact.MailingState ),
ISBLANK( Account.PersonContact.MailingStreet ),
ISBLANK( Account.PersonContact.MailingPostalCode ),
ISBLANK( Account.PersonContact.Birthdate ),
ISBLANK( Account.PersonEmail),
ISBLANK( Account.Phone )
)),
&quot;True&quot;,&quot;False&quot;))</formula>
        <label>CF_AccountFieldsNotFilled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Account_Email__c</fullName>
        <formula>IF( Account.RecordType.Name = &apos;PersonAccount&apos; , Account.PersonEmail, Account.CF_Account_Primary_Contact__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Person Accounts</inlineHelpText>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Person Accounts</inlineHelpText>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Actual_Annual_Treasury_Fee_Income__c</fullName>
        <label>Actual Annual Treasury Fee Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Branch_Account__c</fullName>
        <formula>LLC_BI__Branch__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Branch__c</fullName>
        <description>This field will be used for the Treasury Opportunity and its dependent on Region field.</description>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CF_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 - Perryville Bypass</fullName>
                </value>
                <value>
                    <fullName>7 - Marble Hill</fullName>
                </value>
                <value>
                    <fullName>18 - Patton</fullName>
                </value>
                <value>
                    <fullName>20 - Poplar Bluff</fullName>
                </value>
                <value>
                    <fullName>22 - Steele</fullName>
                </value>
                <value>
                    <fullName>23 - Caruthersville</fullName>
                </value>
                <value>
                    <fullName>24 - Perryville Downtown</fullName>
                </value>
                <value>
                    <fullName>3 - Cape N Kingshighway</fullName>
                </value>
                <value>
                    <fullName>6 - Jackson Jackson Blvd</fullName>
                </value>
                <value>
                    <fullName>8 - Cape William</fullName>
                </value>
                <value>
                    <fullName>11 - Jackson Main</fullName>
                </value>
                <value>
                    <fullName>17 - Scott City</fullName>
                </value>
                <value>
                    <fullName>19 - Cape Broadway</fullName>
                </value>
                <value>
                    <fullName>4 - Ozark</fullName>
                </value>
                <value>
                    <fullName>12 - Republic</fullName>
                </value>
                <value>
                    <fullName>13 - Springfield Campbell</fullName>
                </value>
                <value>
                    <fullName>15 - Springfield Sunshine</fullName>
                </value>
                <value>
                    <fullName>16 - Branson</fullName>
                </value>
                <value>
                    <fullName>37 - Bolivar S Springfield</fullName>
                </value>
                <value>
                    <fullName>38 - Fair Grove</fullName>
                </value>
                <value>
                    <fullName>39 - Bolivar W Broadway</fullName>
                </value>
                <value>
                    <fullName>40 - Springfield E Chestnutt</fullName>
                </value>
                <value>
                    <fullName>10 - Columbia</fullName>
                </value>
                <value>
                    <fullName>26 - St. Robert</fullName>
                </value>
                <value>
                    <fullName>27 - Rolla</fullName>
                </value>
                <value>
                    <fullName>28 - Martinsburg</fullName>
                </value>
                <value>
                    <fullName>29 - Mexico</fullName>
                </value>
                <value>
                    <fullName>31 - Montgomery City</fullName>
                </value>
                <value>
                    <fullName>32 - Centralia</fullName>
                </value>
                <value>
                    <fullName>Contract Services 102</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Class_Code__c</fullName>
        <formula>TEXT( Account.JHJX__CustCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Default_Loan_Name__c</fullName>
        <description>This field has created for default loan name.</description>
        <formula>IF( Account.RecordType.Name = &apos;Business&apos;,
	Account.Name &amp;&apos;-&apos;&amp;TEXT(LLC_BI__Product__c) &amp;&apos;-&apos;&amp; &apos;$&apos; &amp;
	IF(ISBLANK(Loan_Amount__c),
	&apos;0&apos;,
	IF(
	Loan_Amount__c&gt;= 1000000,
	TEXT(FLOOR(Loan_Amount__c/ 1000000)) &amp; &apos;,&apos;,
	&apos;&apos;) &amp;
	IF(
	Loan_Amount__c&gt;= 1000,
	RIGHT(TEXT(FLOOR(Loan_Amount__c/ 1000)), 3) &amp; &apos;,&apos;,
	&apos;&apos;) &amp;
	RIGHT(TEXT(FLOOR(Loan_Amount__c)), 3) &amp; &apos;.&apos; &amp;
	IF(
	MOD(Loan_Amount__c, 1) * 100 &lt; 10,
	&apos;0&apos; &amp; TEXT(ROUND(MOD(Loan_Amount__c, 1), 2) * 100),
	TEXT(MIN(ROUND(MOD(Loan_Amount__c, 1), 2) * 100, 99))
	)) &amp;&apos;-&apos;&amp;TEXT(MONTH(TODAY()))&amp;&apos;.&apos;&amp;TEXT(YEAR(TODAY())),

	Account.FirstName+&quot; &quot;+Account.LastName &amp;&apos;-&apos;&amp;TEXT(LLC_BI__Product__c) &amp;&apos;-&apos;&amp; &apos;$&apos; &amp;
	IF(ISBLANK(Loan_Amount__c),
	&apos;0&apos;,
	IF(
	Loan_Amount__c&gt;= 1000000,
	TEXT(FLOOR(Loan_Amount__c/ 1000000)) &amp; &apos;,&apos;,
	&apos;&apos;) &amp;
	IF(
	Loan_Amount__c&gt;= 1000,
	RIGHT(TEXT(FLOOR(Loan_Amount__c/ 1000)), 3) &amp; &apos;,&apos;,
	&apos;&apos;) &amp;
	RIGHT(TEXT(FLOOR(Loan_Amount__c)), 3) &amp; &apos;.&apos; &amp;
	IF(
	MOD(Loan_Amount__c, 1) * 100 &lt; 10,
	&apos;0&apos; &amp; TEXT(ROUND(MOD(Loan_Amount__c, 1), 2) * 100),
	TEXT(MIN(ROUND(MOD(Loan_Amount__c, 1), 2) * 100, 99))
	)) &amp;&apos;-&apos;&amp;TEXT(MONTH(TODAY()))&amp;&apos;.&apos;&amp;TEXT(YEAR(TODAY()))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Loan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Default_Product_Package_Name__c</fullName>
        <formula>IF(Account.RecordType.Name = &apos;Business&apos;,
   Account.Name &amp; &apos; - Product Package &apos;  &amp; &apos;- &apos; &amp;  TEXT(MONTH(TODAY())) &amp; &apos;.&apos; &amp; TEXT(YEAR(TODAY())),
   Account.FirstName+&quot; &quot;+Account.LastName &amp; &apos; - Product Package &apos;  &amp; &apos;- &apos; &amp;  TEXT(MONTH(TODAY())) &amp; &apos;.&apos; &amp; TEXT(YEAR(TODAY()))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Product Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Deposit_Record_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to map the deposit record type from Lead.</description>
        <label>Deposit Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Email__c</fullName>
        <formula>Account.CF_Account_Primary_Contact__r.Email</formula>
        <inlineHelpText>Only Required On Business Accounts</inlineHelpText>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Has_Converted_Proforma__c</fullName>
        <label>Has Converted Proforma?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Loan_Business_Individual_Record_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if the opportunity record is of Loan record type.</description>
        <label>Loan Business/Individual Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Purpose_Description__c</fullName>
        <description>Provides Description of Loan Purpose</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Purpose Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Purpose__c</fullName>
        <description>Loan Purpose determination    Corresponds with CF_Loan_Purpose code on Loan Object</description>
        <label>Loan Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>15</fullName>
                    <label>Building Improvements</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Construction of Dwelling for Resale/Rental</label>
                </value>
                <value>
                    <fullName>69</fullName>
                    <label>Consumer Loan-All Others</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Contract Services</label>
                </value>
                <value>
                    <fullName>38</fullName>
                    <label>Crop Production</label>
                </value>
                <value>
                    <fullName>58</fullName>
                    <label>Education</label>
                </value>
                <value>
                    <fullName>39</fullName>
                    <label>General Operating</label>
                </value>
                <value>
                    <fullName>71</fullName>
                    <label>Home Equity Line of Credit</label>
                </value>
                <value>
                    <fullName>57</fullName>
                    <label>Home Improvement</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>Improve Real Estate</label>
                </value>
                <value>
                    <fullName>48</fullName>
                    <label>Mo-Bucks&apos;86</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Negotiable Instruments</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>New Commercial Building Construction</label>
                </value>
                <value>
                    <fullName>70</fullName>
                    <label>New Construction Residence</label>
                </value>
                <value>
                    <fullName>59</fullName>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Purchase Business Real Estate</label>
                </value>
                <value>
                    <fullName>34</fullName>
                    <label>Purchase Cattle</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>Purchase Equipment</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Purchase Existing Business</label>
                </value>
                <value>
                    <fullName>35</fullName>
                    <label>Purchase Hogs</label>
                </value>
                <value>
                    <fullName>47</fullName>
                    <label>Purchase Horses</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Purchase Income Producing Real Estate</label>
                </value>
                <value>
                    <fullName>53</fullName>
                    <label>Purchase Lawn Equipment</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>Purchase Machinery</label>
                </value>
                <value>
                    <fullName>56</fullName>
                    <label>Purchase Mobile Home</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>Purchase New Vehicle</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Purchase Non Real Estate Business Assets</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Purchase Real Estate</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Purchase Real Estate for Future Development</label>
                </value>
                <value>
                    <fullName>55</fullName>
                    <label>Purchase Recreational Real Estate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Mailing_City__c</fullName>
        <formula>Account.PersonContact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Person Accounts</inlineHelpText>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Mailing_Country__c</fullName>
        <formula>Account.PersonContact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Person Accounts</inlineHelpText>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Mailing_Postal_Code__c</fullName>
        <formula>Account.PersonContact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Person Accounts</inlineHelpText>
        <label>Mailing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Mailing_State__c</fullName>
        <formula>Account.PersonContact.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Person Accounts</inlineHelpText>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Mailing_Street__c</fullName>
        <formula>Account.PersonContact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Person Accounts</inlineHelpText>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Naics_Code__c</fullName>
        <formula>Account.LLC_BI__Naics_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_New_Existing__c</fullName>
        <description>This field is used on Deposit and Treasury Management records</description>
        <label>New/Existing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New to Bank</fullName>
                </value>
                <value>
                    <fullName>New to Treasury</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Opportunity_Owner_Address__c</fullName>
        <formula>Owner.Street + &apos; &apos;+ Owner.City+ &apos; &apos;+Owner.State+ &apos; &apos;+Owner.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Opportunity_Owner_Phone__c</fullName>
        <formula>Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Opportunity_Owner__c</fullName>
        <formula>Owner.FirstName + &apos; &apos;+Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Phone__c</fullName>
        <formula>Account.CF_Account_Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Business Accounts</inlineHelpText>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Projected_Recurring_Annual_Fee_Income__c</fullName>
        <description>This field represent the Projected Recurring Annual Fee Income once the exception pricing has expired</description>
        <label>Projected Recurring Annual Fee Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Referral_Department__c</fullName>
        <description>This field is used on Deposit and Treasury Management records</description>
        <label>Referral Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>TPCG</fullName>
                </value>
                <value>
                    <fullName>Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Referral_Notes__c</fullName>
        <description>Medium text box for entering Referral Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Referral_Source__c</fullName>
        <description>Referral source for the Treasury Opportunity</description>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-sourced</fullName>
                </value>
                <value>
                    <fullName>Internal Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Client Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Region_Account__c</fullName>
        <description>This is to map the Region form account to opportuniy</description>
        <formula>TEXT( LLC_BI__Branch__r.CF_Region__c )</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Region__c</fullName>
        <description>This Field will be used to point region for the Treasury Opportunity</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>102</fullName>
                </value>
                <value>
                    <fullName>Region 1 - Perryville</fullName>
                </value>
                <value>
                    <fullName>Region 2 - Cape Girardeau</fullName>
                </value>
                <value>
                    <fullName>Region 3 - Springfield</fullName>
                </value>
                <value>
                    <fullName>Region 4 - Columbia</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_SS__c</fullName>
        <formula>Account.LLC_BI__SS_PE__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Person Accounts</inlineHelpText>
        <label>SS#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Servicing_Level__c</fullName>
        <label>Servicing Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Shipping_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Business Accounts</inlineHelpText>
        <label>Physical City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Shipping_Country__c</fullName>
        <formula>Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Business Accounts</inlineHelpText>
        <label>Physical Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Shipping_Postal_Code__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Business Accounts</inlineHelpText>
        <label>Physical Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Shipping_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Business Accounts</inlineHelpText>
        <label>Physical State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Shipping_Street__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Business Accounts</inlineHelpText>
        <label>Physical Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Tax_Identification_Number__c</fullName>
        <formula>Account.LLC_BI__Tax_Identification_Number_PE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only Required On Business Accounts</inlineHelpText>
        <label>Tax Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Management_Record_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if the opportunity record is of treasury management record type.</description>
        <label>Treasury Management Record type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Opportunities</relationshipLabel>
        <relationshipName>HouseholdOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>OpportunityContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunityEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>